2012-07-05 Santiago Munin <burning1@gmail.com> 	* src/pandroid_event_viewer/pandorafms/OnBootLoader.java: New BroadcastReceiver which starts the search new events service after the phone boot. 	* src/pandroid_event_viewer/pandorafms/Core.java: Little changes. 	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: On process_notification it doesn't retrieve count_events anymore. 	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java: Now the launched notification has the correct number of new events. 	* res/values/strings.xml: Added new entries. 	* res/values-en/*: Deleted, unnecessary files. 	* AndroidManifest.xml: Added the new BroadcastReceiver
git-svn-id: https://svn.code.sf.net/p/pandora/code/trunk@6743 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f